[Bug & Style] disable toc scrollbar & fix the error path of resource

--- a/assets/css/common/toc.css
+++ b/assets/css/common/toc.css
@@ -80,7 +80,7 @@
 
 .toc .inner {
     margin: 0 0 0 20px;
-    padding: 0px 15px 15px 20px;
+    padding: 0px 10px 15px 25px;
     font-size: 16px;
 
     /*目录显示高度*/
@@ -91,8 +91,9 @@
 
 .toc .inner::-webkit-scrollbar-thumb {  /*滚动条*/
     background: var(--border);
-    border: 7px solid var(--theme);
+    border: 1px solid var(--theme);
     border-radius: var(--radius);
+    display: none !important;
 }
 
 .toc li ul {
